Use javac-parse rather than JavaParser